fixed header spacing

--- a/styles/sass/_form.scss
+++ b/styles/sass/_form.scss
@@ -4,7 +4,7 @@ legend h2 {
 }
 
 ul {
-    padding: 20px 0 40px;
+    padding: 20px 0;
     display: flex;
     justify-content: space-between;
 }
@@ -65,12 +65,12 @@ input[type="radio"]:focus + label {
 
 .formButton {
     width: 45%;
-    transition: all .5s;
+    transition: all .2s;
 
     &:hover,
     &:focus {
         width: 46%;
-        opacity: .85;
+        opacity: .80;
     }
 }
 
