--- a/styles/sass/_headerAndFooter.scss
+++ b/styles/sass/_headerAndFooter.scss
@@ -1,9 +1,9 @@
 //HEADER STYLES
 header {
-    padding: 60px 0;
+    padding: 40px 0;
 
     img {
-        width: 50%;
+        width: 40%;
     }
 }
 
